# sinch-sdk-python-snippets

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: run_linter.yml
common/: client.py  client_with_environment_variables.py  voice_and_verification_client.py  voice_and_verification_client_with_environment_variables.py
numbers/: rent_and_configure_a_virtual_number.py  rent_and_configure_a_virtual_number_using_rest.py  rent_any_number.py  search_for_a_virtual_number_using_rest.py  search_for_virtual_number.py
sms/: handle_incomig_sms_message.py  send_sms_message.py  send_sms_using_rest.py
snippets/numbers/active_numbers/get/: snippet.py
snippets/numbers/active_numbers/list/: snippet.py
snippets/numbers/active_numbers/list_auto/: snippet.py
snippets/numbers/active_numbers/release/: snippet.py
snippets/numbers/active_numbers/update/: snippet.py
snippets/numbers/available_numbers/check_availability/: snippet.py
snippets/numbers/available_numbers/rent/: snippet.py
snippets/numbers/available_numbers/rent_any/: snippet.py
snippets/numbers/available_numbers/search_for_available_numbers/: snippet.py
snippets/numbers/available_regions/list/: snippet.py
snippets/numbers/callback_configuration/get/: snippet.py
snippets/numbers/callback_configuration/update/: snippet.py
verification/: initiate_sms_verification.py  verification_domain.py
voice/: text_to_speech.py  text_to_speech_using_rest.py  voice_domain.py
